test/hotCases/errors/events/k_exports.js
export { valueA } from './k_valueA';
export { valueB } from './k_valueB';
export { valueC } from './k_valueC';
export { valueD } from './k_valueD';
